@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add extended statistics informations: race stats, natural stats.
+This enables clients to display depletion and such.
+ include/newserver.h player.h
+ include/shared/newclient.h
+ socket/init.c request.c
+Nicolas Weeger 2010-03-20
+
 Fix crash with "cast" command having no arguments.
 Andreas Kirschbaum 2010-03-19
 
